--- a/style.css
+++ b/style.css
@@ -168,3 +168,44 @@ main section{
   margin-bottom: 24px;
   border: none;
  }
+
+ /* responsive media query */
+ .hide{
+  display: none;
+ }
+ @media  screen and (max-width: 576px) {
+  .skills-container{
+    flex-direction: column;
+  }
+  .resume-container , footer , .banner, nav, nav>ul{
+   flex-direction: column;
+  }
+  nav > ul{
+    gap: 20px;
+  }
+  .btn-primary{
+    margin-bottom: 20px;
+  }
+  footer, .about {
+    padding: 0px;
+  }
+  .footer-column{
+    width: 100%;
+   }
+   footer input[type="text"],  footer input[type="email"], footer textarea{
+    width: calc(100% - 40px);
+   }
+    .about-iteams{
+    flex-direction: column;
+    }
+  .banner{
+    margin: 20px;
+  }
+  .header{
+    background-image: none;
+  }
+  .banner-profile-pic{
+    width: 100%;
+  }
+
+ }
